# sentir-mais-prompter

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
prompter_app/: __init__.py  main.py  providers.py  schemas.py  settings.py
tests/: test_main.py  test_providers.py  test_schemas.py  test_settings.py
